* Рефакторинг; * Актуализация тестов.